--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.2.11",
     "vue-router": "^4.0.0-0",
+    "vue-unicons": "^3.2.1",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
